deploy: ed20811802641e8098ddb9cf87453ed0ea3096ad

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CB0V2VVZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DTpm2_V8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BYz0nF2A.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BDDaBhLw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.36UGXw8x.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.IRnRIJwP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CP7KLUnZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DoUMRPuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CdsDfiRt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ds81CiwD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DV1wKaoE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CgZQCz01.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bbi_e9uY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.C_bPnjpp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.pIHu2s99.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.oWgDsGLZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BjCZvL11.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BCawJkkU.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1wsra9m = {
+					__sveltekit_fy2w1i = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CB0V2VVZ.js"),
-						import("./_app/immutable/entry/app.IRnRIJwP.js")
+						import("./_app/immutable/entry/start.BYz0nF2A.js"),
+						import("./_app/immutable/entry/app.CP7KLUnZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
