deploy: 1196771b67898db3e81da68f12509e9022dc65cb

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.Crksu9sr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BYz0nF2A.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BDDaBhLw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B2TdhOfv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DyAKJsI7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.36UGXw8x.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CP7KLUnZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.SPfoCycB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DoUMRPuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CdsDfiRt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ds81CiwD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DV1wKaoE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bbi_e9uY.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B2d9dSF3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.C_bPnjpp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.oWgDsGLZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BNnjoMLc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BjCZvL11.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.CipV6T8N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.uO7l4ZYK.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_fy2w1i = {
+					__sveltekit_14geb8b = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BYz0nF2A.js"),
-						import("./_app/immutable/entry/app.CP7KLUnZ.js")
+						import("./_app/immutable/entry/start.B2TdhOfv.js"),
+						import("./_app/immutable/entry/app.SPfoCycB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
