--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B2TdhOfv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DyAKJsI7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B9qL15v7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CgPd2eJY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.36UGXw8x.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.SPfoCycB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CCpeMx6I.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DoUMRPuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CdsDfiRt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ds81CiwD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DV1wKaoE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B2d9dSF3.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.flSXGHBK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.C_bPnjpp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BNnjoMLc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DAa_zPEr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BjCZvL11.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BCawJkkU.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_14geb8b = {
+					__sveltekit_1jqyw9j = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B2TdhOfv.js"),
-						import("./_app/immutable/entry/app.SPfoCycB.js")
+						import("./_app/immutable/entry/start.B9qL15v7.js"),
+						import("./_app/immutable/entry/app.CCpeMx6I.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
