--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.Crksu9sr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B9qL15v7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CgPd2eJY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CY5UTnJD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bhvg1WGF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.36UGXw8x.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CCpeMx6I.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B_rfaN2b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DoUMRPuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CdsDfiRt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ds81CiwD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DV1wKaoE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.flSXGHBK.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BsZMk4wL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.C_bPnjpp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DAa_zPEr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CevIJnQB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BjCZvL11.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.CipV6T8N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.uO7l4ZYK.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1jqyw9j = {
+					__sveltekit_1gkt61e = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B9qL15v7.js"),
-						import("./_app/immutable/entry/app.CCpeMx6I.js")
+						import("./_app/immutable/entry/start.CY5UTnJD.js"),
+						import("./_app/immutable/entry/app.B_rfaN2b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
