deploy: 3475bc00d6678acdf2c9a59dbb46d5a73c61de8d

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CY5UTnJD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bhvg1WGF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1SzxRYhB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.38_udEg0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.36UGXw8x.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B_rfaN2b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.8B9eHrXY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DoUMRPuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CdsDfiRt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ds81CiwD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DV1wKaoE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BsZMk4wL.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DC-F70MH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.C_bPnjpp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CevIJnQB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D_zYrd3e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BjCZvL11.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BCawJkkU.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1gkt61e = {
+					__sveltekit_1vt6f80 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CY5UTnJD.js"),
-						import("./_app/immutable/entry/app.B_rfaN2b.js")
+						import("./_app/immutable/entry/start.1SzxRYhB.js"),
+						import("./_app/immutable/entry/app.8B9eHrXY.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
