--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.1SzxRYhB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.38_udEg0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DEr-8Nf5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.2XUwc6a8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.36UGXw8x.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8B9eHrXY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CnWSWS8k.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DoUMRPuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CdsDfiRt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ds81CiwD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DV1wKaoE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DC-F70MH.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Ciq9yyk-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.C_bPnjpp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D_zYrd3e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DsIAhM1P.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BjCZvL11.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.Cjc9x14H.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.uO7l4ZYK.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vt6f80 = {
+					__sveltekit_11v3ad6 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.1SzxRYhB.js"),
-						import("./_app/immutable/entry/app.8B9eHrXY.js")
+						import("./_app/immutable/entry/start.DEr-8Nf5.js"),
+						import("./_app/immutable/entry/app.CnWSWS8k.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
