--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DEr-8Nf5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.2XUwc6a8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BHnwa2Q_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BFBioaUf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.36UGXw8x.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CnWSWS8k.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CGirAQVw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DoUMRPuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CdsDfiRt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ds81CiwD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DV1wKaoE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Ciq9yyk-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CavwE47O.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.C_bPnjpp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DsIAhM1P.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.yvYbgiGv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BjCZvL11.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BCawJkkU.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_11v3ad6 = {
+					__sveltekit_5hggb8 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DEr-8Nf5.js"),
-						import("./_app/immutable/entry/app.CnWSWS8k.js")
+						import("./_app/immutable/entry/start.BHnwa2Q_.js"),
+						import("./_app/immutable/entry/app.CGirAQVw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
