deploy: 2175c816baaa872cca713a02312b0dda2eca983e

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.Crksu9sr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BHnwa2Q_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BFBioaUf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Bc59RB7C.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.3OFjq78i.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.36UGXw8x.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CGirAQVw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bw5Hhl9L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DoUMRPuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CdsDfiRt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ds81CiwD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DV1wKaoE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CavwE47O.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ysydTZkh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.C_bPnjpp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.yvYbgiGv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.VhaKcQJ-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BjCZvL11.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.CipV6T8N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.uO7l4ZYK.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_5hggb8 = {
+					__sveltekit_1spr462 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BHnwa2Q_.js"),
-						import("./_app/immutable/entry/app.CGirAQVw.js")
+						import("./_app/immutable/entry/start.Bc59RB7C.js"),
+						import("./_app/immutable/entry/app.Bw5Hhl9L.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
